cleanup mutation_builder, validate() etc
following changes:
1/ kill ent.EditedNodeInfo
2/ simplify NodeWithActionMapOperation and rename to EditNodeOperation (handles create and edit)
3/ changes generated code to pass fieldMap earlier and simplfiy Validate() method. this is going to change as I figure things out more
4/ ent (lower layer just gets raw db fields and saves it). Doesn't care what happens. Once I add json nested fields vs not, that layer will still work as-is and the only thing that needs to change will be actions/mutation builders/generated code/etc
5/ move EntMutationChangeset into its own file
6/ change GetChangeset() to always call Validate() and have Validate() keep track of that so we can't get a non-validated changeset
7/ rename ActionFieldMap to MutationFieldMap incase I don't delete it and it works on the mutation builder when there's actions with sub fields

--- a/cmd/gent/templates/action.tmpl
+++ b/cmd/gent/templates/action.tmpl
@@ -37,16 +37,19 @@ func {{$actionMethodName}}FromContext( {{actionMethodContextArgs $action}}) *{{$
 
 // {{$actionMethodName}} is the factory method to get an ...
 func {{$actionMethodName}}( {{actionMethodArgs $action}}) *{{$actionName}} {
-  return &{{$actionName}}{
-    builder: &actions.EntMutationBuilder{
-      Viewer: viewer,
-      EntConfig: {{$nodeInfo.EntConfig}},
-      Operation: {{writeOperation $action}},
-      {{ if $action.MutatingExistingObject -}}
-        ExistingEntity: {{$nodeInfo.NodeInstance}},
-      {{ end -}}
-    },
+  builder := &actions.EntMutationBuilder{
+    Viewer: viewer,
+    EntConfig: {{$nodeInfo.EntConfig}},
+    Operation: {{writeOperation $action}},
+    {{ if $action.MutatingExistingObject -}}
+      ExistingEntity: {{$nodeInfo.NodeInstance}},
+    {{ end -}}
   }
+  action := &{{$actionName}}{}
+  builder.FieldMap = action.getFieldMap()
+  {{/* hmm */ -}}
+  action.builder = builder
+  return action
 }
 
 func (action *{{$actionName}}) GetViewer() viewer.ViewerContext {
@@ -125,9 +128,9 @@ func (action *{{$actionName}}) {{$edge.MethodName}}ID({{$edge.InstanceName}}ID s
 
 
 // getFieldMap returns the fields that could be edited in this mutation
-func (action *{{$actionName}}) getFieldMap() ent.ActionFieldMap {
-  {{/* TODO ActionFieldMap and MutatingFieldInfo should not be public in ent anymore? */ -}}
-  return ent.ActionFieldMap {
+func (action *{{$actionName}}) getFieldMap() ent.MutationFieldMap {
+  {{/* TODO MutationFieldMap and MutatingFieldInfo should not be public in ent anymore? */ -}}
+  return ent.MutationFieldMap {
     {{ range $field := $fields -}}
       {{$field.QuotedFieldName}}: &ent.MutatingFieldInfo {
         DB: {{$field.QuotedDBName}},
@@ -141,10 +144,10 @@ func (action *{{$actionName}}) getFieldMap() ent.ActionFieldMap {
   }
 }
 
+// Validate returns an error if the current state of the action is not valid
 func (action *{{$actionName}}) Validate() error {
-  return action.builder.ValidateFieldMap(action.getFieldMap())
+  return action.builder.Validate()
 }
-
 
 // Save is the method called to execute this action and save change
 func (action * {{$actionName}}) Save() {{saveActionType $action}} {
