--- a/cmd/gent/templates/mutation_builder.tmpl
+++ b/cmd/gent/templates/mutation_builder.tmpl
@@ -22,6 +22,10 @@ type {{$builderName}} struct {
     {{ if $field.TopLevelStructField -}}
       {{fieldName $field }} *{{fTypeString $field}}
     {{ end -}}
+    {{ if $field.IDField -}}
+      {{fieldName $field}}Builder ent.MutationBuilder
+    {{ end -}}
+
   {{end -}}
 }
 
@@ -51,7 +55,13 @@ func (b *{{$builderName}}) {{$field.SetterMethodName}}({{$field.InstanceName}} {
   return b
 }
 {{/* TODO nillable fields... */}}
+  {{ if $field.Field.IDField -}}
+  func (b *{{$builderName}}) {{$field.SetterMethodName}}Builder(builder ent.MutationBuilder) *{{$builderName}} {
+    b.{{fieldName $field.Field}}Builder = builder
+    return b
+  }
 
+  {{end -}}
 {{end -}}
 
 {{ range $field := $fieldInfos -}}
@@ -59,6 +69,12 @@ func (b *{{$builderName}}) {{$field.GetterMethodName}}() {{$field.InstanceType}}
   if b.{{fieldName $field.Field}} == nil {
     return {{$field.Field.GetZeroValue}}
   }
+  {{ if $field.Field.IDField -}}
+  {{/* TODO probably want a GetPlaceholderValue also... */}}
+    if b.{{fieldName $field.Field}}Builder != nil {
+      return b.{{fieldName $field.Field}}Builder.GetPlaceholderID()
+    }
+  {{end -}}
   return *b.{{fieldName $field.Field}}
 }
 
@@ -115,6 +131,11 @@ func (b *{{$builderName}}) setFields() {
         b.builder.AddInboundEdge(models.{{$inverseEdge.EdgeConst}}, {{$field.InstanceName}}, models.{{$edgeNodeInfo.NodeType}})
       {{ end -}}
     }
+    {{ if $field.Field.IDField -}}
+      if b.{{fieldName $field.Field}}Builder != nil {
+        b.builder.SetField("{{$field.FieldName}}", b.{{fieldName $field.Field}}Builder)
+      }
+    {{end -}}
   {{ end -}}
 }
 
@@ -132,10 +153,32 @@ func (b *{{$builderName}}) Get{{.Node}}() *models.{{.Node}} {
   return &b.{{.NodeInstance}}
 }
 
-func (b *{{$builderName}}) GetChangeset() (ent.Changeset, error) {
+func (b *{{$builderName}}) SetTriggers(triggers []actions.Trigger) {
+  b.builder.SetTriggers(triggers)
+}
+
+func (b *{{$builderName}}) GetChangeset(_ ent.Entity) (ent.Changeset, error) {
+  {{/* TODO fix this ignored param! */}}
+  {{/* need to figure out which is better for API of GetChangeset() */}}
+  {{/* Seems like it makes more sense to have the builder have no param since that is the common case */}}
   b.setFields()
   return b.builder.GetChangeset(&b.{{.NodeInstance}})
 }
+
+func (b *{{$builderName}}) ExistingEnt() ent.Entity {
+  return b.builder.ExistingEnt()
+}
+
+func (b *{{$builderName}}) GetOperation() ent.WriteOperation {
+	return b.builder.GetOperation()
+}
+
+func (b *{{$builderName}}) GetPlaceholderID() string {
+	return b.builder.GetPlaceholderID()
+}
+
+var _ ent.MutationBuilder = &{{$builderName}}{}
+
 
 {{$triggerInterface := printf "%sTrigger" .Node }}
 
