--- a/cmd/gent/templates/action.tmpl
+++ b/cmd/gent/templates/action.tmpl
@@ -77,7 +77,7 @@ func (action *{{$actionName}}) SetBuilderOnTriggers(triggers []actions.Trigger) 
 }
 
 func (action *{{$actionName}}) GetChangeset() (ent.Changeset, error) {
-  return action.builder.GetChangeset(nil)
+  return action.builder.GetChangeset()
 }
 
 func (action *{{$actionName}}) Entity() ent.Entity {
