confirm that privacy in actions works
this involved rejigging how things worked so that each action's GetChangeset() method returned everything that was needed to make it work.
Had to change Changeset interface to add a GetBuilder() method whose GetChangeset() method is called at the right time as needed
this means that the action framework can handle validation, privacy etc before calling GetChangeset()

It also means that the behavior is consistent between all the different formats:

1/ calling actions.GetChangeset(action) and then ent.SaveChangeset(changeset)
2/ calling action.Save() which does the 2 steps above
3/ GetChangeset() of an acion in a trigger works and does the necessary privacy checks before it returns the changeset so you can be sure the privacy logic is being respected if it's a standalone action or within a trigger

I'm sure more things need to change here but it's starting to all make sense and fit better.

--- a/cmd/gent/templates/action.tmpl
+++ b/cmd/gent/templates/action.tmpl
@@ -81,7 +81,11 @@ func {{$actionMethodName}}( {{actionMethodArgs $action}}) *{{$actionName}} {
   return action
 }
 
-func (action *{{$actionName}}) GetBuilder() {{$builderType}} {
+func (action *{{$actionName}}) GetBuilder() ent.MutationBuilder {
+  return action.builder
+}
+
+func (action *{{$actionName}}) GetTypedBuilder() {{$builderType}} {
   return action.builder
 }
 
@@ -104,12 +108,13 @@ func (action *{{$actionName}}) SetBuilderOnTriggers(triggers []actions.Trigger) 
 
 func (action *{{$actionName}}) GetChangeset() (ent.Changeset, error) {
   {{if $edgeGroupAction -}}
+  // TODO...
   return actions.MultiChangesets(
     action.builder.GetChangeset,
     action.edgeGroupBuilder.GetChangeset,
   )
   {{else -}}
-  return action.builder.GetChangeset()
+  return actions.GetChangeset(action)
   {{end -}}
 }
 
@@ -119,6 +124,10 @@ func (action *{{$actionName}}) Entity() ent.Entity {
   {{ else -}}
     return nil
   {{end -}}
+}
+
+func (action *{{$actionName}}) ExistingEnt() ent.Entity {
+  return action.builder.ExistingEnt()
 }
 
 {{$fields := fields $action}}
