add observers (side effects that run as part of the action) but don't have to succeed for the action to succeed

--- a/cmd/gent/templates/action.tmpl
+++ b/cmd/gent/templates/action.tmpl
@@ -71,6 +71,10 @@ func (action *{{$actionName}}) SetBuilderOnTriggers(triggers []actions.Trigger) 
 	return action.builder.SetTriggers(triggers)
 }
 
+func (action *{{$actionName}}) SetBuilderOnObservers(observers []actions.Observer) error {
+  return action.builder.SetObservers(observers)
+}
+
 func (action *{{$actionName}}) GetChangeset() (ent.Changeset, error) {
   return actions.GetChangeset(action)
 }
