--- a/cmd/gent/templates/mutation_builder.tmpl
+++ b/cmd/gent/templates/mutation_builder.tmpl
@@ -201,6 +201,20 @@ func (b *{{$builderName}}) SetTriggers(triggers []actions.Trigger) error {
 	return nil
 }
 
+// SetObservers sets the builder on an observer. Unlike SetTriggers, it's not required that observers implement the {{.Node}}Observer 
+// interface since there's expected to be more reusability here e.g. generic logging, generic send text observer etc
+func (b *{{$builderName}}) SetObservers(observers []actions.Observer) error {
+  b.builder.SetObservers(observers)
+  {{$observerInterface := printf "%sObserver" .Node -}}
+	for _, o := range observers {
+		observer, ok := o.({{$observerInterface}})
+		if ok {
+      observer.SetBuilder(b)
+    }
+	}
+  return nil
+}
+
 func (b *{{$builderName}}) GetChangeset() (ent.Changeset, error) {
   return b.builder.GetChangeset()
 }
@@ -238,6 +252,22 @@ type {{$triggerStruct}} struct {
 
 func (trigger *{{$triggerStruct}}) SetBuilder(b *{{$builderName}}) {
   trigger.Builder = b
+}
+
+{{$observerInterface := printf "%sObserver" .Node }}
+
+type {{$observerInterface}} interface {
+  SetBuilder(*{{$builderName}})
+}
+
+{{$observerStruct := printf "%sMutationBuilderObserver" .Node }}
+
+type {{$observerStruct}} struct {
+  Builder *{{$builderName}}
+}
+
+func (observer *{{$observerStruct}}) SetBuilder(b *{{$builderName}}) {
+  observer.Builder = b
 }
 
 {{end -}}
