--- a/cmd/gent/templates/node.tmpl
+++ b/cmd/gent/templates/node.tmpl
@@ -160,19 +160,73 @@ func GenLoad{{.Node}}(viewer viewer.ViewerContext, id string, result *{{.NodeRes
     {{end}}
     {{range $edge := .Associations -}}
       {{$edgeName := .EdgeName -}}
+      {{$uniqueEdge := .Unique}}
       {{with .NodeInfo -}}
-        // Load{{$edgeName}}Edges returns the {{.Node}} edges associated with the {{$currentNode}} instance
-        func ({{$currentNodeInstance}} *{{$currentNode}}) Load{{$edgeName}}Edges() ([]*ent.Edge, error) {
-          return ent.LoadEdgesByType({{$currentNodeInstance}}.ID, {{$edge.EdgeConst}})
-        }
 
-        // Gen{{$edgeName}}Edges returns the {{.Node}} edges associated with the {{$currentNode}} instance
-        func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}Edges(result *ent.EdgesResult, wg *sync.WaitGroup) {
-          defer wg.Done()
-          edgesResultChan := make(chan ent.EdgesResult)
-          go ent.GenLoadEdgesByType({{$currentNodeInstance}}.ID, {{$edge.EdgeConst}}, edgesResultChan)
-          *result = <- edgesResultChan
-        }
+        {{ if $uniqueEdge -}}
+          // Load{{$edgeName}}Edge returns the {{$edgeName}} edge associated with the {{$currentNode}} instance
+          func ({{$currentNodeInstance}} *{{$currentNode}}) Load{{$edgeName}}Edge() (*ent.Edge, error) {
+            return ent.LoadUniqueEdgeByType({{$currentNodeInstance}}.ID, {{$edge.EdgeConst}})
+          }
+
+          // Gen{{$edgeName}}Edge returns the {{$edgeName}} edge associated with the {{$currentNode}} instance
+          func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}Edge(result *ent.EdgeResult, wg *sync.WaitGroup) {
+            defer wg.Done()
+            edgeResultChan := make(chan ent.EdgeResult)
+            go ent.GenLoadUniqueEdgeByType({{$currentNodeInstance}}.ID, {{$edge.EdgeConst}}, edgeResultChan)
+            *result = <- edgeResultChan
+          }
+
+          // Gen{{$edgeName}} returns the {{.Node}} associated with the {{$currentNode}} instance
+          func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}(result *{{.NodeResult}}, wg *sync.WaitGroup) {
+            defer wg.Done()
+            var {{.NodeInstance}} {{.Node}}
+            chanErr := make(chan error)
+            go ent.GenLoadUniqueNodeByType({{$currentNodeInstance}}.Viewer, {{$currentNodeInstance}}.ID, {{$edge.EdgeConst}}, &{{.NodeInstance}}, {{.EntConfig}}, chanErr)
+            err := <-chanErr
+            result.{{.Node}} = &{{.NodeInstance}}
+            result.Error = err
+          }
+
+          // Load{{$edgeName}} returns the {{.Node}} associated with the {{$currentNode}} instance
+          func ({{$currentNodeInstance}} *{{$currentNode}}) Load{{$edgeName}}() (*{{.Node}}, error) {
+            var {{.NodeInstance}} {{.Node}}
+            err := ent.LoadUniqueNodeByType({{$currentNodeInstance}}.Viewer, {{$currentNodeInstance}}.ID, {{$edge.EdgeConst}}, &{{.NodeInstance}}, {{.EntConfig}})
+            return &{{.NodeInstance}}, err
+          }
+        {{else -}}
+          // Load{{$edgeName}}Edges returns the {{$edgeName}} edges associated with the {{$currentNode}} instance
+          func ({{$currentNodeInstance}} *{{$currentNode}}) Load{{$edgeName}}Edges() ([]*ent.Edge, error) {
+            return ent.LoadEdgesByType({{$currentNodeInstance}}.ID, {{$edge.EdgeConst}})
+          }
+
+          // Gen{{$edgeName}}Edges returns the {{.Node}} edges associated with the {{$currentNode}} instance
+          func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}Edges(result *ent.EdgesResult, wg *sync.WaitGroup) {
+            defer wg.Done()
+            edgesResultChan := make(chan ent.EdgesResult)
+            go ent.GenLoadEdgesByType({{$currentNodeInstance}}.ID, {{$edge.EdgeConst}}, edgesResultChan)
+            *result = <- edgesResultChan
+          }
+
+          // Gen{{$edgeName}} returns the {{.Nodes}} associated with the {{$currentNode}} instance
+          func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}(result *{{.NodesResult}}, wg *sync.WaitGroup) {
+            defer wg.Done()
+            var {{.NodeInstance}}s {{.NodesSlice}}
+            chanErr := make(chan error)
+            go ent.GenLoadNodesByType({{$currentNodeInstance}}.Viewer, {{$currentNodeInstance}}.ID, {{$edge.EdgeConst}}, &{{.NodeInstance}}s, {{.EntConfig}}, chanErr)
+            err := <-chanErr
+            result.{{.Nodes}} = {{.NodeInstance}}s
+            result.Error = err
+          }
+
+          // Load{{$edgeName}} returns the {{.Nodes}} associated with the {{$currentNode}} instance
+          func ({{$currentNodeInstance}} *{{$currentNode}}) Load{{$edgeName}}() ({{.NodesSlice}}, error) {
+            var {{.NodeInstance}}s {{.NodesSlice}}
+            err := ent.LoadNodesByType({{$currentNodeInstance}}.Viewer, {{$currentNodeInstance}}.ID, {{$edge.EdgeConst}}, &{{.NodeInstance}}s, {{.EntConfig}})
+            return {{.NodeInstance}}s, err
+          }
+        {{end -}}
+
 
         // Load{{$edgeName}}EdgeFor loads the ent.Edge between the current node and the given id2 for the {{$edgeName}} edge.
         func ({{$currentNodeInstance}} *{{$currentNode}}) Load{{$edgeName}}EdgeFor(id2 string) (*ent.Edge, error) {
@@ -185,24 +239,6 @@ func GenLoad{{.Node}}(viewer viewer.ViewerContext, id string, result *{{.NodeRes
           edgeResultChan := make(chan ent.EdgeResult)
           go ent.GenLoadEdgeByType({{$currentNodeInstance}}.ID, id2, {{$edge.EdgeConst}}, edgeResultChan)
           *result = <- edgeResultChan
-        }
-
-        // Gen{{$edgeName}} returns the {{.Nodes}} associated with the {{$currentNode}} instance
-        func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}(result *{{.NodesResult}}, wg *sync.WaitGroup) {
-          defer wg.Done()
-          var {{.NodeInstance}}s {{.NodesSlice}}
-          chanErr := make(chan error)
-          go ent.GenLoadNodesByType({{$currentNodeInstance}}.Viewer, {{$currentNodeInstance}}.ID, {{$edge.EdgeConst}}, &{{.NodeInstance}}s, {{.EntConfig}}, chanErr)
-          err := <-chanErr
-          result.{{.Nodes}} = {{.NodeInstance}}s
-          result.Error = err
-        }
-
-        // Load{{$edgeName}} returns the {{.Nodes}} associated with the {{$currentNode}} instance
-        func ({{$currentNodeInstance}} *{{$currentNode}}) Load{{$edgeName}}() ({{.NodesSlice}}, error) {
-          var {{.NodeInstance}}s {{.NodesSlice}}
-          err := ent.LoadNodesByType({{$currentNodeInstance}}.Viewer, {{$currentNodeInstance}}.ID, {{$edge.EdgeConst}}, &{{.NodeInstance}}s, {{.EntConfig}})
-          return {{.NodeInstance}}s, err
         }
       {{end}}
     {{end }}
