add Edges to typescript schema
This adds AssocEdges and AssocEdgeGroups as configurable edges to the typescript schema.

Doesn't add foreign key edge (similar to go) since we can infer it from the foreignkey field property (and generate the foreign key and field edge from it)

Doesn't add field edge (will change go to do this) because it should be on field for a better API (similarly to foreign key) and then we can generate the field edge from it

There's a potential third case for field edge where there's a field that's a not a foreign key or an edge for either legacy or performance reasons (or something non-obvious) at the moment and we want to indicate what the object is. Hopefully, the API can just change to ["User", ""] and it should just work when we get there or ["User"] in typescript since it's more flexible.

--- a/internal/schema/input/read_schema.tmpl
+++ b/internal/schema/input/read_schema.tmpl
@@ -1,5 +1,5 @@
 {{/* for now we are hardcoding to where this currently is. we should be better about this */ -}}
-import Schema, {Field} from "{{.SchemaPath}}"
+import Schema, {Field, Edge, AssocEdge, AssocEdgeGroup} from "{{.SchemaPath}}"
 
 {{ range $schema := .Schemas -}}
   import {{$schema.Name}} from "./{{$schema.Path}}"
@@ -34,10 +34,29 @@ for (const key in potentialSchemas) {
   }
   fields = fields.concat(schema.fields);
 
+  let assocEdges: AssocEdge[] = [];
+  let assocEdgeGroups: AssocEdgeGroup[] = [];
+
+  if (schema.edges) {
+    for (const edge of schema.edges) {
+      if (isAssocEdge(edge)) {
+        assocEdges.push(edge)
+      } else {
+        assocEdgeGroups.push(edge)
+      }
+    }
+  }
+
   schemas[key] = {
     tableName: schema.tableName,
     fields: fields,
+    assocEdges: assocEdges,
+    assocEdgeGroups: assocEdgeGroups,
   };
+}
+
+function isAssocEdge(edge: Edge): edge is AssocEdge {
+  return (edge as AssocEdge).schemaName != undefined;
 }
 
 console.log(JSON.stringify(schemas));
